# zs-editor-imgui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project_info.in
doc/: build.md  credits.md  license_header.txt  usage.md
zs/editor/: GlfwSystem.cpp  GlfwSystem.hpp  GuiWindow.cpp  GuiWindow.hpp  GuiWindowCallbacks.cpp  GuiWindowImgui.cpp  GuiWindowMaintenance.cpp  ImguiRenderer.cpp  ImguiRenderer.hpp  ImguiSystem.cpp  ImguiSystem.hpp  SceneEditor.cpp  SceneEditor.hpp  SceneEditorAugment.cpp  SceneEditorGUI.cpp  SceneEditorLighting.cpp  SceneEditorOIT.cpp  SceneEditorOcclusionQuery.cpp  SceneEditorOutline.cpp  SceneEditorPicking.cpp  main.cpp
zs/editor/plugins/: ExamplePlugin.cpp  ExceptionNode.cpp  LongOutputNode.cpp  LongRuntimeNode.cpp
zs/editor/python/: Init.hpp  PyEval.cpp  PyEval.hpp
zs/editor/python/widgets/: PyEditorGraph.cpp  PyEditorGraph.hpp
zs/editor/scripts/: setup-env.py
zs/editor/shaders/: mesh.slang
zs/editor/widgets/: AssetBrowserComponent.cpp  AssetBrowserComponent.hpp  DetailWidgetComponent.cpp  DetailWidgetComponent.hpp  GraphWidgetComponent.cpp  GraphWidgetComponent.hpp  GraphWidgetGraph.cpp  GraphWidgetLink.cpp  GraphWidgetNode.cpp  GraphWidgetPin.cpp  ResourceWidgetComponent.cpp  ResourceWidgetComponent.hpp  SceneWidgetCameraUtils.hpp  SceneWidgetComponent.cpp  SceneWidgetComponent.hpp  SceneWidgetDefaultMode.cpp  SceneWidgetPaintMode.cpp  SceneWidgetRoamingMode.cpp  SceneWidgetSelectionMode.cpp  SequencerComponent.cpp  SequencerComponent.hpp  TermWidgetComponent.cpp  TermWidgetComponent.hpp  TextEditorComponent.cpp  TextEditorComponent.hpp  TreeWidgetComponent.cpp  TreeWidgetComponent.hpp  TreeWidgetPrimitiveComponent.cpp  TreeWidgetUsdComponent.cpp  WidgetBase.hpp  WidgetComponent.cpp  WidgetComponent.hpp  WidgetComponentWrapper.hpp  WidgetDrawUtilities.hpp  WidgetEvent.cpp  WidgetEvent.hpp
zs/editor/widgets/utilities/: drawing.cpp  drawing.h  parser.hpp  textselect.cpp  textselect.hpp  widgets.cpp  widgets.h
